--- a/style.css
+++ b/style.css
@@ -126,7 +126,8 @@
   .top {
     border: 0.7px solid black;
     padding: 0.75rem; 
-    display: inline-block; 
+    display: flex;
+    justify-content: space-between; 
     width: 18vw;
 }
 .top label,
@@ -134,7 +135,11 @@
     display: inline; /* Display inline */
 }
 
+.main-content{
+  display: flex;
+  gap: 1rem;
 
+}
 .sidebar{
     border: 0.7px solid red;
     padding:0rem 1.8rem;
@@ -158,16 +163,99 @@
     display: inline-block; /* Ensure content stays on the same line */
     width: 40%;
 }
+.Male.sidebar_chield label {
+  border: 1px solid #424141; /* Thin border */
+  border-radius: 8px; /* Border radius */
+  padding: 5px 8px; /* Padding */
+  display: inline-block; /* Make labels behave like block elements */
+  margin: 5px; /* Add some margin between labels */
+}
+.home {
+  border: 1px solid #ccc; /* Border style */
+  border-radius: 5px; /* Border radius */
+  padding: 5px 0px; /* Padding inside the div */
+  display: inline-flex; /* Display div as inline-flex to align items horizontally */
+  align-items: left; /* Align items vertically center */
+}
+
+.home input[type="text"] {
+  border: none; /* Remove default input border */
+  outline: none; /* Remove outline */
+  padding: 5px 5px 5px 0px; /* Add padding inside input */
+}
+
+.home input[type="text"]::placeholder {
+  color: #999; 
+}
+
+.home i.material-icons {
+  color: #999; 
+}
 
   .sidebar_chield{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: center;
     padding: 0.1rem;
      gap: 0.2; 
     color: #606060;
    
   }
-  .sidebar_chield:hover{
-  background-color: #e5e5e5;
-  cursor: pointer;
+  .sidebar_chield_item{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0.1rem;
+     gap: 0.4rem; 
+    color: #606060;
+
   }
+  /* ss */
+
+  .Services-card-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 1.5rem 2rem;
+    position: relative;
+}
+.Services-card-text>h1{
+    text-align: center;
+    color: black;
+}
+.Services-card{
+  
+    height: 30rem;
+    width: 20rem;
+    border-radius: 8px;
+    border: 1px solid rgb(218, 214, 214);
+    box-shadow: #787976;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.Services-card>img{
+    height: 30%;
+    width: 100%;
+}
+.Services-card ul li{
+    list-style: square;
+    
+    
+}
+.Services-card ul li::marker {
+    
+    color: green;
+}
+.mrp{
+  display: flex;
+  gap: 0.4rem;
+  align-items: end;
+}
+.rating{
+  display: flex;
+  gap: 0.4rem;
+  align-items: end;
+}
