--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
     /* background-color: rgb(251, 242, 244); */
   }
   
-  .videos {
+  .Products {
     background: #f9f9f9;
     overflow: auto;
     height: 100%;
@@ -64,52 +64,11 @@
     border-top: 1px solid #ddd;
   }
   
-  .video-container {
+  .Products-items{
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    gap: 0.5rem;
     flex-wrap: wrap;
-  }
-  
-  .thumbnail {
-    display: flex;
-    height: 180px;
-    width: 100%;
-  }
-  
-  .thumbnail img {
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-  }
-  
-  .video-details {
-    display: flex;
-    gap: 10px;
-    margin-top: 8px;
-  }
-  
-  .author img {
-    object-fit: cover;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-  }
-  
-  .video {
-    width: 310px;
-    margin-bottom: 30px;
-  }
-  
-  .recomend {
-    margin-bottom: 10px;
-    font-size: 20px;
-    color: rgb(3, 3, 3);
-    padding: 10px;
-  }
-  
-  .video-title p,
-  span {
-    color: rgb(96, 96, 96);
   }
   
   hr{
@@ -216,9 +175,9 @@
   .Services-card-text{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-    padding: 1.5rem 2rem;
+   
+    gap: 0.8rem;
+    padding: 0.5rem 1rem;
     position: relative;
 }
 .Services-card-text>h1{
@@ -226,29 +185,22 @@
     color: black;
 }
 .Services-card{
-  
-    height: 30rem;
-    width: 20rem;
+
+    margin-top: 4px;
+    height: 28rem;
+    width: 18rem;
     border-radius: 8px;
     border: 1px solid rgb(218, 214, 214);
     box-shadow: #787976;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    border-radius: 4px;
 }
 .Services-card>img{
-    height: 30%;
+    height: 60%;
     width: 100%;
 }
-.Services-card ul li{
-    list-style: square;
-    
-    
-}
-.Services-card ul li::marker {
-    
-    color: green;
-}
+
 .mrp{
   display: flex;
   gap: 0.4rem;
@@ -258,4 +210,28 @@
   display: flex;
   gap: 0.4rem;
   align-items: end;
+}
+.Services-card-text .Delivery {
+  width: 45%;
+  text-align: center;
+  background-color: rgb(183, 185, 183);
+  padding: 4px;
+  border-radius: 14px;
+  color: black; 
+
+}
+.rating span {
+  background-color: green; 
+  padding: 4px 5px; 
+  border-radius: 12px; 
+  color: white; 
+}
+@media only screen and (max-width: 1100px) {
+  .sidebar {
+      display: none; /* Change display to block for smaller screens */
+  }
+  .Services-card {
+      width: 90vw;
+     
+  }
 }
