--- a/new.css
+++ b/new.css
@@ -67,18 +67,24 @@
 
   .home {
     margin-top: 0.5rem;
-    border: 1px solid #ccc; /* Border style */
-    border-radius: 5px; /* Border radius */
-    padding: 5px 0px; /* Padding inside the div */
-    display: inline-flex; /* Display div as inline-flex to align items horizontally */
-    align-items: left; /* Align items vertically center */
+    border: 1px solid #ccc;
+    border-radius: 5px; 
+    padding: 5px 0px; 
+    display: inline-flex; 
+    align-items: left;
+  }
+  .home1{
+    margin-top: 0.9rem;
+    margin-left: 1rem;
+    border:none;
+    border-radius:5px;
   }
   
   .home input[type="text"] {
     width: 90%;
-    border: none; /* Remove default input border */
-    outline: none; /* Remove outline */
-    padding: 5px 0px 5px 5px; /* Add padding inside input */
+    border: none; 
+    outline: none;
+    padding: 5px 0px 5px 5px;
   }
   
   .home input[type="text"]::placeholder {
@@ -89,21 +95,19 @@
     color: #999; 
   }
   .Gender {
-    border: 1px solid black; /* Add thin border */
+    border: 1px solid black; 
   
-    border-radius: 8px; /* Add border radius */
-    display: inline-block; /* Ensure content stays on the same line */
+    border-radius: 8px; 
+    display: inline-block; 
     width: 40%;
 }
 .Male.sidebar_chield label {
-  border: 1px solid #424141; /* Thin border */
-  border-radius: 8px; /* Border radius */
-  padding: 5px 8px; /* Padding */
-  display: inline-block; /* Make labels behave like block elements */
-  margin: 5px; /* Add some margin between labels */
+  border: 1px solid #424141;
+  border-radius: 8px; 
+  padding: 5px 8px; 
+  display: inline-block; 
+  margin: 5px; 
 }
-
-
 
 .Products {
     background: #f9f9f9;
@@ -114,12 +118,24 @@
   }
   
   .Products-items{
+    height: auto;
+    width: 100%;
     display: flex;
-    /* justify-content: space-around; */
-    gap: 0.5rem;
+    /* gap: 0.5rem; */
     flex-wrap: wrap;
   }
-
+  .Services-card {
+    margin-top: 4px;
+    width: 33.33%; 
+    height: 370px;
+    max-width: calc((100% - 2 * 0.5rem) / 3); 
+    border-radius: 8px;
+    border: 1px solid rgb(218, 214, 214);
+    box-shadow: #787976;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+  }
 .Services-card-text{
     display: flex;
     flex-direction: column;
@@ -132,20 +148,9 @@
     text-align: center;
     color: black;
 }
-.Services-card{
 
-    margin-top: 4px;
-    height: 40%;
-    width: 31%;
-    border-radius: 8px;
-    border: 1px solid rgb(218, 214, 214);
-    box-shadow: #787976;
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
-}
 .Services-card>img{
-    height: 40%;
+    height: 55%;
     width: 100%;
 }
 
