--- a/new.css
+++ b/new.css
@@ -11,6 +11,8 @@
   display: flex;
   gap: 0.5rem;
   border: 2px solid gold;
+  position: relative;
+  z-index: -1;
 }
 
 .sidebar{
@@ -128,8 +130,8 @@ margin: 5px;
 }
 .Services-card {
   margin-top: 4px;
-  width: 33.33%; 
-  height: 420px;
+  width: 32.33%; 
+  height: 470px;
   max-width: calc((100% - 2 * 0.5rem) / 3); 
   border-radius: 8px;
   border: 1px solid rgb(218, 214, 214);
@@ -151,7 +153,7 @@ margin: 5px;
 }
 
 .Services-card>img{
-  height: 56%;
+  height: 54%;
   width: 100%;
   border-radius: 8px 8px 0px 0px;
   /* object-fit: cover; */
@@ -164,11 +166,11 @@ align-items: baseline;
 }
 .rating{
 display: flex;
-gap: 0.2rem;
+gap: 0.1rem;
 align-items: end;
 }
 .Services-card-text .Delivery {
-width: 45%;
+width: 65%;
 text-align: center;
 background-color: rgb(183, 185, 183);
 padding: 4px;
