--- a/style.css
+++ b/style.css
@@ -1,257 +1,250 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  
-  /* style for header */
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 70px;
-    padding: 10px;
-  }
-  
-  .header_left {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-  
-  .header_left img {
-    width: 50px;
-  }
-  
-  .header_left i {
-    cursor: pointer;
-  }
-  
-  .header_center form {
-    display: flex;
-    border: 1px solid #ddd;
-  }
-  
-  .header_center form input {
-    width: 500px;
-    border: none;
-    height: 100%;
-    padding: 10px;
-  }
-  
-  .header_center form button {
-    border: none;
-  }
-  
-  /* Header End */
-  /* Sidebar Styling */
-  .main {
-    display: flex;
-    height: calc(100vh - 70px);
-  }
-  
-  .sidebar {
-    height: 100%;
-    width: 250px;
-    display: flex;
-    flex-direction: column;
-    /* background-color: rgb(251, 242, 244); */
-  }
-  
-  .Products {
-    background: #f9f9f9;
-    overflow: auto;
-    height: auto;
-    width: auto;
-    border-top: 1px solid #ddd;
-  }
-  
-  .Products-items{
-    display: flex;
-   
-    /* justify-content: space-around; */
-    /* gap: 0.5rem; */
-    flex-wrap: wrap;
-  }
-  
-  hr{
-    height: 1px;
-    background-color: #e5e5e5;
-    border: none;
-  }
-  .main{
-    padding-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  .top {
-    border: 0.7px solid black;
-    padding: 0.75rem; 
-    display: flex;
-    justify-content: space-between; 
-    width: 18vw;
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+ 
 }
-.top label,
-.top strong {
-    display: inline; /* Display inline */
+body {
+  
+  font-family: "Mier book",sans-serif ;
+  letter-spacing: 1.1px ;
+  color :#353543
 }
-.main{
-  background-color: red;
-  height: auto;
+a{
+  text-decoration: none;
+  color :#353543
+}
+li{
+  list-style-type: none;
+}
+
+.primary-nav{
+  max-width: 1340px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  margin: auto;
+  align-items: center;
+ 
+}
+
+.primary-nav>.search-box{
+  border: 1px solid grey;
+  padding: 10px;
+  width: 400px;
+  border-radius: 7px;
+  display: flex;
+  align-items: center;
+  margin: 0px 20px;
+  position: relative;
+ 
+}
+.search-box>.box{
+  outline: none;
+  border: none;
+  background: transparent;
+  flex: 1;
+  margin-left: 10px;
+  /* color:rgb(159, 32, 137); */
+  font-size: 18px;
+}
+.search-focus{
+  position: absolute;
+  top: 100%;
+  left:0%;
+
+  width: 100%;
+ 
+  transition: .5s;
+  
+}
+.box:focus + .search-focus{
+opacity: 1;
+visibility: visible;
+z-index: 1;
+top: 103%;
+}
+
+.primary-nav>.vr-Line{
+width: 2px;
+height: 40px;
+background-color: grey;
+border-radius: 100px;
+}
+.primary-nav>.image-size a{
+
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+
+}
+.Download{
+  padding: 25px 0px;
+  position: relative;
+}
+
+.hr-Line{
+  width: 100%;
+  height: 1px;
+  background-color: grey;
+}
+
+.secondary-nav{
   max-width: 1340px;
   margin: auto;
+  position: relative;
+ 
 }
 
-.main-content{
+.secondary-nav>ul{
+display: flex;
+gap: 0px 40px;
+flex-wrap: wrap;
 
-  display: flex;
-  gap: 1rem;
-
-}
-
-.sidebar-head{
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
 
 }
-.sidebar{
-    border: 0.7px solid red;
-    padding:0rem 1.8rem;
-    width: 18vw;
-    /* height: 90vh; */
-}
-  .sub_sidebar{
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    justify-content: center;
-    gap: 20px;
-    margin-top: 20px;
-    /* margin-left: 10px; */
-    
+.secondary-nav>ul>li{
+ padding: 20px 0px;
+
   }
-  .Gender {
-    border: 1px solid black; /* Add thin border */
+ 
+.bbh:hover {
+
+border-bottom: 3px solid rgb(159, 32, 137);
+
+
+}
+.bbh a:hover{
+  color: rgb(159, 32, 137);
+  font-weight: bolder;
+  font-size: 15px; 
+}
+.alternative-color{
+  background-color:rgb(248,248,255) ;
+}
+
+.drop-down{
+ 
+  position: absolute;
+ 
+  display:flex;
+  opacity: 0;
+  visibility: hidden;
+  transition: .3s;
+  width: 100%;
+  top: 120%;
+  left: 0%;
+  border: 1px Solid grey ;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  background-color: rgb(255, 255, 255);
+}
+.secondary-nav>ul>li:hover .drop-down{
+  opacity: 1;
+  visibility: visible;
+  top: 100%;
+}
+.drop-box{
+display: inline-block;
+  width: auto;
+ top: 0%;
+  padding: 20px;
+
+  line-height: 1.6;
+
+ 
+ 
+}
+.drop-box>p{
+  color: rgb(159, 32, 137);
+font-weight: bolder;
+margin-bottom: 15px;
+}
+
+.Download-hover{
+position: absolute;
+border: 1px;
+top: 103%;
+width: 150%;
+left:-20%;
+z-index: 1;
+padding: 20px;
+opacity: 0;
+visibility: hidden;
+transition: 1s;
+border: 1px Solid grey ;
+background-color: white;
+box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
+.Download-hover>a img{
+  width: 100%;
+  padding-top:20px ;
+ 
+ 
+}
+.Download:hover .Download-hover{
+  opacity: 1;
+visibility: visible;
+}
+
+footer{
+  background-color: #ede8f3;
+
+  padding: 40px 0px;
+}
+
+.footer-primary,.footer-secondary{
+
+  max-width: 1340px;
+  margin: auto;
   
-    border-radius: 8px; /* Add border radius */
-    display: inline-block; /* Ensure content stays on the same line */
-    width: 40%;
 }
-.Male.sidebar_chield label {
-  border: 1px solid #424141; /* Thin border */
-  border-radius: 8px; /* Border radius */
-  padding: 4px 7px; /* Padding */
-  display: inline-block; /* Make labels behave like block elements */
-  margin-top: 0.4rem;
-}
-.home {
-  border: 1px solid #ccc; /* Border style */
-  border-radius: 5px; /* Border radius */
-  padding: 5px 0px; /* Padding inside the div */
-  display: inline-flex; /* Display div as inline-flex to align items horizontally */
-  align-items: left; /* Align items vertically center */
-}
+.fprimary-1{
+  padding: 0px 8px;
 
-.home input[type="text"] {
-  border: none; /* Remove default input border */
-  outline: none; /* Remove outline */
-  padding: 5px 5px 5px 0px; /* Add padding inside input */
 }
-
-.home input[type="text"]::placeholder {
-  color: #999; 
-}
-
-.home i.material-icons {
-  color: #999; 
-}
-
-  .sidebar_chield{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0.1rem;
-     gap: 0.2; 
-    color: #606060;
-   
-  }
-  .sidebar_chield_item{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 0.1rem;
-     gap: 0.4rem; 
-    color: #606060;
-
-  }
-  /* ss */
-
-  .Services-card-text{
-    display: flex;
-    flex-direction: column;
-   
-    gap: 0.8rem;
-    padding: 0.5rem 1rem;
-    position: relative;
-}
-.Services-card-text>h3{
-  text-overflow: ellipsis;
-    /* text-align: center; */
-    white-space: no-wrap;
-    color: #8B8BA3;
-}
-.Services-card{
-
-    margin-top: 4px;
-    height: 28rem;
-    width: calc(90%/3 - 10px);
-    border-radius: 8px;
-    border: 1px solid rgb(218, 214, 214);
-    box-shadow: #787976;
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
-}
-.Services-card>img{
-    height: 60%;
-    width: 100%;
-}
-
-.mrp{
+.footer-img{
   display: flex;
-  gap: 0.4rem;
-  align-items: end;
-}
-.rating{
-  display: flex;
-  gap: 0.4rem;
-  align-items: end;
-}
-.Services-card-text .Delivery {
-  width: 45%;
-  text-align: center;
-  background-color: rgb(183, 185, 183);
-  padding: 4px;
-  border-radius: 14px;
-  color: black; 
+  gap: 16px;
 
 }
-.rating span {
-  background-color: green; 
-  padding: 4px 5px; 
-  border-radius: 12px; 
-  color: white; 
+.fprimary-1>h4,.fprimary-2>ul,.fprimary-3>ul,.fprimary-4>h5 {
+  white-space: nowrap; 
+  overflow: hidden; 
+ 
 }
-/* @media only screen and (max-width: 1100px) {
-  .sidebar {
-      display: none;
-  }
-  .Services-card {
-      width: 90vw;
-     
-  }
-} */
+
+.fprimary-1>p,.fprimary-2>ul,.fprimary-3>ul,.fprimary-4>h5{
+  font-family: "Meri demi" ,sans-serif;
+  font-size: 18px;
+}
+.footer-ques p{
+  
+  font-size: 14px; 
+  font-weight: 600;
+  padding-top: 4px;
+  color: #616173;
+  
+}
+.word{
+  color:rgb(159, 32, 137); 
+}
+.footer-ques h4 ,.footer-secondary h4{
+  font-size: 19px; 
+  color: #353543ea;
+}
+.links>a{
+  font-family: "Meri demi" ,sans-serif;
+  font-size: 14px;
+  color:rgb(159, 32, 137); 
+  font-weight: 600;
+ 
+}
+@media screen and (max-width:450px) {
+.footer-primary{
+  flex-direction: column;
+  padding: 20px;
+  row-gap: 20px;
+ 
+}
+}
