--- a/style.css
+++ b/style.css
@@ -19,11 +19,11 @@ li{
 }
 
 .primary-nav{
-  max-width: 1340px;
+  max-width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
-  margin: auto;
+  margin: 0px 30px;
   align-items: center;
  
 }
@@ -91,8 +91,8 @@ gap: 10px;
 }
 
 .secondary-nav{
-  max-width: 1340px;
-  margin: auto;
+  max-width: 100%;
+  margin: 0px 30px;
   position: relative;
  
 }
@@ -195,7 +195,7 @@ footer{
 
 .footer-primary,.footer-secondary{
 
-  max-width: 1340px;
+  max-width: 100%;
   margin: auto;
   
 }
